# thesis

./: .gitignore  comModell  flo.local.crt  flo.local.key  noteToGuiElements  noteToOpcuaImplementation
UML/: AuthentificationRequestReceived.activity.violet.html  Zusammenfassung.docx  arch.pptx  backend.ucase.violet.html  changePageRequestReceived.activity.violet.html  frontend.ucase.violet.html  global.ucase.violet.html  klassendiagramm global backend.xmi
ausschreibung/: Ausschreibung A-Stand.docx  Ausschreibung B-Stand.docx  Ausschreibung.docx
backEnd/: CMakeLists.txt  backEnd  backend.cpp  backend.hpp  backend_fwd.hpp  globalInclude.hpp  httpServer.cpp  httpServer.hpp  main.cpp  newcpp.cpp  newhpp.hpp  opcuaServer.cpp  opcuaServer.hpp  open62541.h  sqlClient.cpp  sqlClient.hpp  util.cpp  util.hpp  websocketServer.cpp  websocketServer.hpp
backEnd/certificates/: server_certificate.hpp
doc/: .gitignore  NOTES.txt  __latexindent_temp.tex  acronym.tex  anhang.tex  clean.cmd  content.tex  dcugerman.bst  main.tex  packages.tex  references.bib  sqlQuery.sql
doc/content/: einleitung.tex  fazit.tex  hauptteil.tex
doc/content/hauptteil/: aktuellerStand.tex  systemEntwurf.tex  umsetzungPoC.tex  (+1 more)
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js  router.js  store.js
sql scripts/: create Tables.sql  create user and database.sql
sqlScripts/: createDatabase.sql  createProcedures.sql  createSampleData.sql  createTables.sql  dropDatabase.sql  dropTables.sql
testing/: latencyTest.csv  latencyTest.html  latencyTest.xlsx  pausezeit.html
(+64 files in other folders)
